Revert "fix html structure and alignment for illustration devices (desktop)"
This reverts commit da76f39d2d3de1f62c83704ae9bab4d6c9824b7c.

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -43,6 +43,7 @@ body {
 }
 
 main {
+  margin: 0 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
