--- a/src/scss/components/_article.scss
+++ b/src/scss/components/_article.scss
@@ -3,7 +3,6 @@
 @use '../abstracts/mixins' as m;
 
 .article {
-  margin: 0 3rem;
   font-family: 'Barlow Condensed';
 
   &__new {
